Skip to content

Leak in test_src_player related to vlc_memstream_close

=================================================================
==660392==ERROR: LeakSanitizer: detected memory leaks

Direct leak of 11 byte(s) in 11 object(s) allocated from:
    #0 0x7efd5402e1b2 in __interceptor_realloc /usr/src/debug/gcc/libsanitizer/asan/asan_malloc_linux.cpp:164
    #1 0x7efd522f7e78 in _IO_mem_finish (/usr/lib/libc.so.6+0x81e78)

SUMMARY: AddressSanitizer: 11 byte(s) leaked in 11 allocation(s).
FAIL test_src_player (exit status: 1)

logs_io_issue.md

It looks like one of the pointer is not released, probably linked to the the track string ids.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information